# Space-Invaders-Pygame

./: main.py  pyproject.toml
.github/workflows/: black.yml  flake8.yml
