[tool.poetry]
name = "space-invaders-pygame"
version = "0.1.0"
description = ""
authors = ["Igor Telmenko <igor-telmenko@yandex.ru>"]
readme = "README.md"
packages = [{include = "space_invaders_pygame"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
